--- a/style.css
+++ b/style.css
@@ -5,11 +5,13 @@ color: #191970; /* Warna teks utama (Biru Gelap) */
 } 
 . kartu-profil {
   width: 300px;
-  margin: 50px auto; /* 50px jarak atas/bawah, auto menengahkan kiri/kanan */
+  margin: 50px auto; /* 50px jarak atas/bawah, auto menengahkan 
+  kiri/kanan */
 padding: 20px;
   backgorund-color: white;
   border-radius: 15px; /* Membuat sudut menjadi melengkung */
 box-shadow: 0 4px 8px rgba (0,0,0,0.1) ; /* Efek bayangan */
+  text-align: center; /* Menengahkan semua teks di dalam kartu */
 } 
 .kartu-profil img. {
   width: 150px
