--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 body {
   backgorund-color: #FFFFE0; /* Warna kuning cerah */
-font-family: Times New Roman, sans-serif; /* Jenis huruf yang bersih dan mudah dibaca */
+font-family: Arial, sans-serif; /* Jenis huruf yang bersih dan mudah dibaca */
 color: #191970; /* Warna teks utama (Biru Gelap) */
 } 
 . kartu-profil {
-  width: 300px;
+  width: 30px;
   margin: 50px auto; /* 50px jarak atas/bawah, auto menengahkan 
   kiri/kanan */
 padding: 20px;
