--- a/style.css
+++ b/style.css
@@ -4,17 +4,17 @@ font-family: Arial, sans-serif; /* Jenis huruf yang bersih dan mudah dibaca */
 color: #191970; /* Warna teks utama (Biru Gelap) */
 } 
 
-. kartu-profil {
+.kartu-profil {
   width: 30px;
   margin: 50px auto; /* 50px jarak atas/bawah, auto menengahkan kiri/kanan */
 padding: 20px;
   backgorund-color: white;
   border-radius: 15px; /* Membuat sudut menjadi melengkung */
-box-shadow: 0 4px 8px rgba (0,0,0,0.1) ; /* Efek bayangan */
+box-shadow: 0 4px 8px rgba (0,0,0.1) ; /* Efek bayangan */
   text-align: center; /* Menengahkan semua teks di dalam kartu */
 } 
 
-.kartu-profil img. {
+.kartu-profil img {
   width: 150px;
   border-radius: 50%; /* Trik untuk membuat gambar persegi menjadi lingkaran sempurna */
 }
